# scs-sdk-plugin

./: CMakeLists.txt  README.md
scs-client/C#/SCSSdkClient/: SCSSdkTelemetry.cs  SharedMemory.cs  SharedMemoryHelper.cs
scs-telemetry/: CMakeLists.txt
scs-telemetry/inc/: platform.hpp  scs-telemetry-common.hpp  sharedmemory.hpp  sharedmemory_platform.hpp
scs-telemetry/src/: log.cpp  scs_telemetry.cpp  sharedmemory.cpp  sharedmemory_platform.cpp
